# pact-sse

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  pact-plugin.json
.github/workflows/: ci.yml  release.yml
examples/pacts/: sseConsumer-sseProvider.json
examples/sse-consumer/: Cargo.toml
examples/sse-consumer/src/: lib.rs
examples/sse-provider/: Cargo.toml
examples/sse-provider/pacts/: sseConsumer-sseProvider.json
examples/sse-provider/src/: main.rs
examples/sse-provider/tests/: pact_verify.rs
src/: lib.rs  main.rs  mock_server.rs  parser.rs  proto.rs  server.rs  sse_content.rs  tcp.rs  utils.rs
tests/: integration_tests.rs
