#[workspace]
#
#members = [
#    ".",
#    "integrated_tests/response_metadata",
#    "integrated_tests/repeated_enums",
#    "integrated_tests/default_values",
#    "integrated_tests/matching_maps",
#    "integrated_tests/imported_message",
#    "integrated_tests/imported_message_same_package_multiple_files",
#    "integrated_tests/imported_without_package",
#]

[package]
name = "pact-sse-plugin"
version = "1.0.0-alpha3"
edition = "2021"
authors = ["Tien Pham <tien.pham@example.com>"]
description = "Pact plugin for Server-Sent Events"
homepage = "http://www.pactflow.io"
repository = "https://github.com/pactflow/pact-sse-plugin"
keywords = ["testing", "pact", "sse"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
anyhow = "1.0.86"
bytes = { version = "1.10.1", features = ["serde"] }
clap = { version = "4.5.9", features = ["cargo", "env"] }
futures = "0.3.30"
http = "1.3.1"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.6", features = ["full"] }
lazy_static = "1.5.0"
maplit = "1.0.2"
num = "0.4.3"
pact_matching = "~2.0.2"
pact_models = "~1.3.7"
pact-plugin-driver = "~0.7.5"
pact_verifier = "~1.3.3"
prost = "0.13.1"
prost-types = "0.13.1"
regex = "1.11.1"
serde_json = "1.0.120"
tokio = { version = "1.45.1", features = ["full"] }
tonic = "0.13.1"
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
tower-service = "0.3.3"
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "local-time", "tracing-log"] }
tracing-appender = "0.2.3"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
pact_consumer = "~1.4.1"
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1.0.120"

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }
os_info = "3.12.0"
tonic-build = "0.13.1"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
lto = true
