[package]
name = "sse-provider"
version = "0.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
chrono = "0.4"
fakeit = "1.3.0"
rand = "0.8.5"
anyhow = "1.0.75"
simple-log = "1.1.0"
log = "0.4.20"
uuid = { version = "1.6.1", features = ["v4"] }

[dev-dependencies]
async-trait = "0.1"
expectest = "0.2"
maplit = "1.0.2"
pact_models = "~1.3"
pact_verifier = { version = "1.3", features = ["plugins"] }
reqwest = "0.12"
serde_json = "1.0"
test-log = "0.2"
tokio = { version = "1", features = ["full"] }
